fix: replace manual margins with gaps

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,2 +1,10 @@
 #container{
 }
+
+.appWrapper{
+    width: 75vw;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
