--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -1,8 +1,8 @@
 .cardDiv{
-    margin-bottom: 2rem;
-    margin-top: 1rem;
+    /* margin-bottom: 1rem;
+    margin-top: 1rem; */
     padding: 1rem;
-    width: 75vw;
+    width: auto;
     height: 30vh;
     background-color: #1a0a2e;
     border-radius: 5px;
