--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,8 +1,6 @@
 .footerWrapper{
     display: flex;
     justify-content: space-between;
-    width: 75vw;
-    margin: 0 auto;
 }
 
 .info{
