--- a/src/pages/About/About.module.css
+++ b/src/pages/About/About.module.css
@@ -1,17 +1,17 @@
 .aboutWrapper{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
     margin-top: 15vh; /* to counter header fixed height of 10vh */
-    margin-bottom: 7px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 75vw;
+    width: 100%;
+    
 }
 
 .imageTitle{
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
-    margin: 0 auto;
-    padding: 4px;
+    justify-content: flex-start;
+    width: 100%;
 }
 
 .imageDiv{
@@ -33,9 +33,10 @@
 }
 
 .imageDescription{
-    width: 75%;
-    margin: 7px auto;
-    padding: 4px;
+    width: 100%;
     font-size: 12px;
 }
 
+.titleDiv{
+    margin-left: 1rem;
+}
